# llvm-js

./: .gitignore  CMakeLists.txt  Cargo.toml  CmakeLists.txt  Earthfile  README.md  compile.sh  rustfmt.toml
.github/: dependabot.yaml
.github/workflows/: c_test.yml  test.yml
assembler/: Cargo.toml  build.rs
assembler/src/: clang.rs  lib.rs  linker.rs  llc.rs
ast/: Cargo.toml
ast/src/: lib.rs  precompiler.rs
ast/src/js_ast/: array_expression.rs  binary_expression.rs  block_statement.rs  do_while_loop.rs  expression.rs  function_call.rs  function_declaration.rs  identifier.rs  if_else_statement.rs  logical_expression.rs  member_expression.rs  mod.rs  object_expression.rs  program.rs  return_statement.rs  right_assignment_value.rs  unary_expression.rs  value.rs  variable_assigment.rs  variable_declaration.rs  variable_expression.rs  variable_value.rs  while_loop.rs
ast/src/llvm_ast/: array_expression.rs  binary_expression.rs  deallocate_expression.rs  do_while_loop.rs  expression.rs  function_call.rs  function_declaration.rs  identifier.rs  if_else_statement.rs  logical_expression.rs  member_expression.rs  mod.rs  object_expression.rs  program.rs  return_statement.rs  unary_expression.rs  variable_assigment.rs  variable_declaration.rs  variable_expression.rs  variable_value.rs  while_loop.rs
c/: CMakeLists.txt  CmakeLists.txt  arithmetic.c  arithmetic.cpp  arithmetic.h  arithmetic.hpp  array.cpp  array.h  array.hpp  assertions.c  assertions.cpp  assertions.h  assertions.hpp  interface.cpp  interface.h  logical.c  logical.cpp  logical.h  logical.hpp  object.cpp  object.h  object.hpp  test.c  variable.c  variable.cpp  variable.h  variable.hpp
c/array/: array.cpp  array.hpp
c/assert/: assert.hpp
c/fmt/: fmt.hpp
c/function/: function.cpp  function.hpp
c/garbage_collector/: garbage_collector.hpp
c/number/: number.cpp  number.hpp
c/object/: object.cpp  object.hpp
c/test/: CMakeLists.txt  CmakeLists.txt  arithmetic_test.cpp  array_test.cpp  fmt_test.cpp  function_test.cpp  garbage_collector_test.cpp  logical_test.cpp  number_test.cpp  object_test.cpp  variable_test.cpp
c/variable/: variable.cpp  variable.hpp  variable_c.cpp
cmake/: fmt.cmake  gtest.cmake  llvm.cmake
collections/: Cargo.toml
collections/src/: map.rs  set.rs
compiler/: Cargo.toml  build.rs  config.toml
compiler/src/: arithmetic_operations.rs  context.rs  dynamic_type.rs  extern_functions.rs  function.rs  if_else.rs  lib.rs  logical_operations.rs  loops.rs  main.rs  main_function.rs  object.rs  precompiler.rs  printf.rs  variable.rs  while_loop.rs
compiler/src/compiler/: mod.rs
compiler/src/extern_functions/: assert.rs  mod.rs  printf.rs
compiler/src/js_ast/: block_statement.rs  expression.rs  function_call.rs  function_declaration.rs  identifier.rs  literal.rs  mod.rs  program.rs  variable_assigment.rs  variable_declaration.rs
compiler/src/lexer/: mod.rs
compiler/src/lexer/tokens/: mod.rs  separator.rs
compiler/src/llvm_ast/: expression.rs  function_call.rs  function_declaration.rs  mod.rs  variable_assigment.rs  variable_declaration.rs
compiler/src/logical_operations/: mod.rs
compiler/src/predefined_functions/: abort.rs  allocate.rs  arithmetic.rs  assert.rs  assert_eq.rs  assertions.rs  convert.rs  logical.rs  mod.rs  object.rs  printf.rs  strcmp.rs  strlen.rs  variable.rs
compiler/src/predefined_functions/test/: mod.rs
compiler/src/types/: boolean.rs  float.rs  integer.rs  mod.rs  string.rs
core/: Cargo.toml
core/src/: array.rs  function.rs  lib.rs  number.rs  object.rs  pointer.rs  ptr.rs  variable.rs
core/src/interfaces/: alloc.rs  arithmetic.rs  convert.rs  logical.rs  (+5 more)
crates/precompiler/: Cargo.toml
lexer/: Cargo.toml
lexer/src/: char_reader.rs  lib.rs
precompiler/: Cargo.toml
precompiler/src/: lib.rs  rpn.rs
rpn/: Cargo.toml
rpn/src/: lib.rs
src/: compiler.rs  main.rs  map.rs  parser.rs  precompiler.rs  set.rs
src/assembler/: Cargo.toml
src/ast/: Cargo.toml  assigment_expression.rs  block_statement.rs  expression.rs  function_declaration.rs  identifier.rs  literal.rs  mod.rs  program.rs  right_assignment_value.rs  variable_declaration.rs
src/ast/src/js_ast/: array_expression.rs  binary_expression.rs  do_while_loop.rs  expression.rs  function_call.rs  identifier.rs  mod.rs  object_expression.rs  unary_expression.rs  variable_assigment.rs  variable_expression.rs  while_loop.rs
src/ast/src/llvm_ast/: array_expression.rs  function_declaration.rs  identifier.rs  if_else_statement.rs  member_expression.rs  mod.rs  object_expression.rs  return_statement.rs  variable_expression.rs
src/compiler/: Cargo.toml  assigment_expression.rs  expression.rs  literal.rs  mod.rs  program.rs  variable_declaration.rs  variables_storage.rs
src/js_ast/: assigment_expression.rs  block_statement.rs  expression.rs  function_call.rs  function_declaration.rs  identifier.rs  literal.rs  mod.rs  program.rs  right_assignment_value.rs  variable_assigment.rs  variable_declaration.rs
src/lexer/: char_reader.rs  mod.rs  position.rs
src/llvm_ast/: expression.rs  function_call.rs  function_declaration.rs  mod.rs  program.rs  variable_assigment.rs  variable_declaration.rs
src/parser/: assigment_expression.rs  block_statement.rs  expression.rs  identifier.rs  literal.rs  mod.rs  program.rs  right_assignment_value.rs  variable_declaration.rs
src/rpn/: Cargo.toml
test_scripts/: basic.js  basic.ll
test_scripts/algorithms/: double_linked_list.js  sorts.js
test_scripts/arithmetic/: addition.js  division.js  multiplication.js  string_concat.js  substraction.js
test_scripts/basic/: array.js  block.js  comments.js  functions.js  if_else.js  logical_not.js  loops.js  object.js  primitive_types.js  primitive_types_1.js  primitive_types_2.js  variables.js
test_scripts/logical/: and.js  ge.js  gt.js  le.js  logical_and.js  logical_not.js  logical_or.js  logical_seq.js  logical_sne.js  lt.js  not.js  or.js  seq.js  sne.js
test_scripts/memory/: primitive_types.js
testing/: Cargo.toml  README.md
testing/src/: compile.rs  lib.rs
testing/tests/: lib.rs
(+55 files in other folders)
