[workspace]
members = [
    "crates/assembler",
    "crates/ast",
    "crates/bin",
    "crates/compiler",
    "crates/core",
    "crates/collections",
    "crates/rpn",
    "crates/precompiler",
    "crates/lexer",
    "testing",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
assembler = { path = "crates/assembler" }
ast = { path = "crates/ast" }
compiler = { path = "crates/compiler" }
core = { path = "crates/core" }
collections = { path = "crates/collections" }
rpn = { path = "crates/rpn" }
precompiler = { path = "crates/precompiler" }
lexer = { path = "crates/lexer" }

thiserror = { version = "1.0.40" }

proptest = { version = "1.1" }
test-strategy = { version = "0.3" }