[workspace]
resolver = "2"
members = [
    "assembler",
    "ast",
    "bin",
    "compiler",
    "core",
    "collections",
    "rpn",
    "precompiler",
    "testing",
    "lexer",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
assembler = { path = "assembler" }
ast = { path = "ast" }
compiler = { path = "compiler" }
core = { path = "core" }
collections = { path = "collections" }
rpn = { path = "rpn" }
precompiler = { path = "precompiler" }
lexer = { path = "lexer" }

thiserror = { version = "1.0.40" }

proptest = { version = "1.1" }
test-strategy = { version = "0.3" }