[workspace]
resolver = "2"
members = [
    "src/assembler",
    "src/ast",
    "src/bin",
    "src/compiler",
    "src/core",
    "src/collections",
    "src/rpn",
    "src/precompiler",
    "testing",
    "src/lexer",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
assembler = { path = "src/assembler" }
ast = { path = "src/ast" }
compiler = { path = "src/compiler" }
core = { path = "src/core" }
collections = { path = "src/collections" }
rpn = { path = "src/rpn" }
precompiler = { path = "src/precompiler" }
lexer = { path = "src/lexer" }

thiserror = { version = "1.0.40" }

proptest = { version = "1.1" }
test-strategy = { version = "0.3" }