[package]
name = "ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
collections = { path = "../collections" }
precompiler = { path = "../precompiler" }
compiler = { path = "../compiler" }
lexer = { path = "../lexer" }
thiserror = { version = "1.0.37" }