[package]
name = "llvm-js-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
collections = { path = "../collections" }
lexer = { path = "../lexer" }
thiserror = { version = "1.0.31" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
