[package]
name = "ast"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpn = { workspace = true }
collections = { workspace = true }
precompiler = { workspace = true }
compiler = { workspace = true }
lexer = { workspace = true }
thiserror = { workspace = true }